card section spacing fixed desktop

--- a/sass/_johns.sass
+++ b/sass/_johns.sass
@@ -109,8 +109,8 @@ ul
 
 @media screen and (min-width: $medium)
    .ts-card-container
-      padding-left: 54px
-      padding-right: 54px
+      padding-left: 55px
+      padding-right: 70px
       
 
    .ts-molc-card
@@ -166,6 +166,36 @@ ul
 
 
 @media screen and (min-width:$large)
+   .ts-card-container
+      padding-left: 74px
+      padding-right: 85px
+      
+
+   .ts-molc-card
+      padding: 0px
+      
+
+   .ts-molc-card--mod   
+      width: 290px
+      height: 596px
+      margin-bottom: 10px
+      margin-left: -2px
+      margin-right: -2px
+
+   .ts-cardt1__h4
+      font-size: 25px
+      line-height: 1
+      letter-spacing: -0.5px
+      font-weight: 800
+   .ts-cardt1__p
+      line-height: 1.25
+      margin-bottom: 10px
+
+   .ts-atom-card__img
+      width: 80px
+      height: 80px
+      margin-bottom: -16px
+
    .ts-footer__list-social
       margin-right: 10px
       
